<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_shape"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/wishlistProductWidgetImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/widget_list_item_image_height"
        android:contentDescription="@string/content_description_product_image_widget"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/wishlistProductWidgetNameTextView"
        style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/wishlistProductWidgetPriceTextView"
        android:layout_alignStart="@+id/wishlistProductWidgetImage"
        android:layout_margin="@dimen/widget_list_item_product_name_margin"
        android:fontFamily="@font/poppins_medium"
        tools:text="@string/label_product_name_widget" />

    <TextView
        android:id="@+id/wishlistProductWidgetPriceTextView"
        style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/wishlistProductWidgetImage"
        android:layout_alignStart="@+id/wishlistProductWidgetImage"
        android:layout_margin="@dimen/widget_list_item_product_price_margin"
        android:fontFamily="@font/poppins_medium"
        tools:text="@string/label_product_price_widget" />

</RelativeLayout>