<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/profileHeaderBackground"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_profile_background_height"
        android:contentDescription="@string/content_description_user_profile_background"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/header_profile_image_margin_bottom"
        android:layout_marginStart="@dimen/header_profile_image_margin_start"
        android:layout_marginTop="@dimen/header_profile_image_margin_top"
        android:contentDescription="@string/content_description_user_profile_image"
        app:layout_constraintBottom_toTopOf="@+id/profileNameTextView"
        app:layout_constraintStart_toStartOf="@+id/profileHeaderBackground"
        app:layout_constraintTop_toTopOf="@+id/profileHeaderBackground"
        app:layout_constraintVertical_bias="0.783"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/profileNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/header_profile_name_margin_bottom"
        android:layout_marginStart="@dimen/header_profile_name_margin_start"
        android:fontFamily="@font/poppins"
        android:textColor="#fff"
        android:textSize="@dimen/header_profile_name_text_size"
        app:layout_constraintBottom_toTopOf="@+id/profileEmailTextView"
        app:layout_constraintStart_toStartOf="@+id/profileHeaderBackground"
        tools:text="@string/label_user_name" />

    <TextView
        android:id="@+id/profileEmailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/header_profile_email_margin"
        android:fontFamily="@font/poppins"
        android:textColor="#fff"
        android:textSize="@dimen/header_profile_email_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/profileHeaderBackground"
        app:layout_constraintStart_toStartOf="@+id/profileHeaderBackground"
        tools:text="@string/label_user_email" />
</android.support.constraint.ConstraintLayout>