<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/productListParentCardView"
    style="@style/CardViewStyle"
    android:layout_margin="@dimen/product_images_list_item_card_margin"
    app:cardPreventCornerOverlap="false"
    card_view:cardCornerRadius="@dimen/cardview_default_radius"
    card_view:elevation="@dimen/cardview_default_elevation">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/productImage"
            android:layout_width="@dimen/products_list_item_image_width"
            android:layout_height="0dp"
            android:background="@drawable/price_background"
            android:contentDescription="@string/content_description_product_image"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/saleInPercentageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/products_list_item_sale_margin_bottom"
            android:background="@drawable/price_background"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:padding="@dimen/products_list_item_sale_padding"
            android:textColor="#fff"
            android:textSize="@dimen/products_list_item_sale_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/productImage"
            app:layout_constraintStart_toStartOf="@+id/productImage"
            tools:text="@string/label_discount_percentage" />

        <TextView
            android:id="@+id/productNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="@dimen/products_list_item_name_margin_top"
            android:fontFamily="@font/poppins"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/products_list_item_name_text_size"
            app:layout_constraintEnd_toStartOf="@+id/addToWishlistImageButton"
            app:layout_constraintStart_toStartOf="@+id/productDescriptionTextView"
            app:layout_constraintTop_toTopOf="@+id/productImage"
            tools:text="@string/label_product_name" />

        <TextView
            android:id="@+id/productDescriptionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/products_list_item_description_margin"
            android:fontFamily="@font/poppins_light"
            android:maxLines="3"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/products_list_item_description_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/productImage"
            app:layout_constraintTop_toBottomOf="@+id/productNameTextView"
            tools:text="@string/label_product_description" />

        <TextView
            android:id="@+id/productPriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/products_list_item_price_margin_top"
            android:fontFamily="@font/poppins_light"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/products_list_item_price_text_size"
            app:layout_constraintStart_toStartOf="@+id/productDescriptionTextView"
            app:layout_constraintTop_toBottomOf="@+id/productDescriptionTextView"
            tools:text="@string/label_product_price" />

        <ImageButton
            android:id="@+id/addToWishlistImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/products_list_item_wishlist_button_margin_end"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/content_description_add_to_wishlist_button"
            android:cropToPadding="false"
            android:focusable="true"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@+id/productNameTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_bookmark_outline" />


    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
